# sdre-rust-logging

./: .pre-commit-config.yaml  Cargo.toml  README.MD
.github/: dependabot.yaml
.github/workflows/: on_pr.yaml
src/: lib.rs
