[package]
name = "sdre-rust-logging"
edition = "2021"
version = "0.3.1"
authors = ["Fred Clausen"]
description = "A simple logging library for Rust, with a custom formatter."
documentation = "https://github.com/sdr-enthusiasts/sdre-rust-logging"
homepage = "https://github.com/sdr-enthusiasts/sdre-rust-logging"
repository = "https://github.com/sdr-enthusiasts/sdre-rust-logging"
readme = "README.MD"
license = "MIT"
rust-version = "1.69.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
chrono = "0.4.37"
log = "0.4.21"
anstyle = "1.0.6"
